# pyacvd

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.rst  README.txt  azure-pipelines.yml  cmake_install.cmake  compile_commands.json  description.rst  pyproject.toml  requirements_build.txt  setup.py
.cache/clangd/index/: array_support.h.38196282C56E57E3.idx  clustering.cpp.E0C1652B3B6A8D55.idx
.ci/: azure-publish-dist.yml
.github/workflows/: build-and-deploy.yml  testing-and-deployment.yml
PyACVD/: Clustering.py  VTK_Plotting.py  __init__.py
PyACVD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyACVD/Tests/: Remesh.py  __init__.py
PyACVD/cython/: Clustering_Cython.cpp  Clustering_Cython.pyx
docs/: _build_png.py  index.rst
pyacvd/: __init__.py  _version.py  clustering.py
pyacvd/cython/: _clustering.pyx
src/: array_support.h  clustering.cpp
src/pyacvd/: __init__.py  _accessor.py  _clustering.pyi  _version.py  clustering.py
src/pyacvd/cython/: _clustering.pyx
tests/: test_accessor.py  test_clustering.py
