[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.33.0",
    "cython>=0.29.0",
    "oldest-supported-numpy"
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
junit_family= "legacy"
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning",
    # bogus numpy ABI warning (see numpy/#432)
    "ignore:.*numpy.dtype size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning"
]
